[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asp_plot"
version = "1.7.0"
license = {text = "BSD-3-Clause"}
authors = [
  { name="Ben Purinton", email="purinton@uw.edu" },
  { name="David Shean", email="dshean@uw.edu" },
  { name="Shashank Bhushan", email="sbhusha1@umd.edu" },
]
description = "Package for plotting outputs Ames Stereo Pipeline processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "contextily",
    "fpdf2",
    "GDAL",
    "geopandas",
    "matplotlib",
    "matplotlib-scalebar",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "rioxarray",
    "scipy",
    "shapely",
    "sliderule",
    "xarray",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.scripts]
asp_plot = "asp_plot.cli.asp_plot:main"
csm_camera_plot = "asp_plot.cli.csm_camera_plot:main"
stereo_geom = "asp_plot.cli.stereo_geom:main"

[project.urls]
Homepage = "https://github.com/uw-cryo/asp_plot"
Issues = "https://github.com/uw-cryo/asp_plot/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/",
  "notebooks/",
  "original_code/",
  "scratch/",
]
