[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asp_plot"
version = "1.12.0"
license = {text = "BSD-3-Clause"}
authors = [
  { name="Ben Purinton", email="purinton@uw.edu" },
  { name="David Shean", email="dshean@uw.edu" },
  { name="Shashank Bhushan", email="sbhusha1@umd.edu" },
]
description = "Package for plotting outputs Ames Stereo Pipeline processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "contextily",
    "fpdf2",
    "GDAL",
    "geopandas",
    "matplotlib",
    "matplotlib-scalebar",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "rioxarray",
    "scipy",
    "shapely",
    "pyyaml",
    "sliderule>=5.3.0",
    "xarray",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.scripts]
asp_plot = "asp_plot.cli.asp_plot:main"
csm_camera_plot = "asp_plot.cli.csm_camera_plot:main"
stereo_geom = "asp_plot.cli.stereo_geom:main"
request_planetary_altimetry = "asp_plot.cli.request_planetary_altimetry:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]
docs = [
    "sphinx>=7",
    "myst-nb",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-book-theme",
    "sphinx-autobuild",
]

[project.urls]
Homepage = "https://github.com/uw-cryo/asp_plot"
Documentation = "https://asp-plot.readthedocs.io"
Issues = "https://github.com/uw-cryo/asp_plot/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/",
  "notebooks/",
  "original_code/",
  "scratch/",
  "reports/",
  "docs/",
]
